html overflow fix

--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -20,6 +20,7 @@ ul {
 html {
   font-size: 16px;
   font-family: Arial;
+  overflow-x: hidden;
 }
 
 a {
